--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=chrome
+browser=headless
 docuportBETA=https://beta.docuport.app
 google.url=https://www.google.com
 loop.practice=https://loopcamp.vercel.app/
