--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,8 @@
-browser=headless
+browser=chrome
 docuportBETA=https://beta.docuport.app
 google.url=https://www.google.com
 loop.practice=https://loopcamp.vercel.app/
 dynamicLoading.username=tomsmith
 dynamicLoading.incorrectPassword=incorrect
 product.url=https://demoblaze.com/#
+timeouts-10
